--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="cartes">
                             <figure>
                                 <a  href="#"><!--carte intégralement cliquable-->
-                                    <img alt="photos" class="photos" src="images/Cannebière.jpg"><!--photo chambre-->
+                                    <img alt="photos" class="photos" src="Images/Cannebière.jpg"><!--photo chambre-->
                                     <div class="description"><!--bloc description de l'hébegement-->
                                         <h3>Auberge la Cannebière</h3><!--nom hébergement-->
                                         <p>Nuit à partir de 25€</p><!--prix hébergement-->
@@ -118,7 +118,7 @@
                         <div class="cartes">
                             <figure>
                                 <a href="#">
-                                    <img alt="photos" class="photos" src="images/port.jpg">
+                                    <img alt="photos" class="photos" src="Images/port.jpg">
                                     <div class="description">
                                         <h3>Hôtel du port</h3>
                                         <p>Nuit à partir de 51€</p>
@@ -132,7 +132,7 @@
                         <div class="cartes">
                             <figure>
                                 <a href="#">
-                                    <img alt="photos" class="photos" src="images/mouettes.jpg">
+                                    <img alt="photos" class="photos" src="Images/mouettes.jpg">
                                     <div class="description">
                                         <h3>Hôtel Les Mouettes</h3>
                                         <p>Nuit à partir de 76€</p>
@@ -146,7 +146,7 @@
                         <div class="cartes">
                             <figure>
                                 <a href="#">
-                                    <img alt="photos" class="photos" src="images/mer.jpg">
+                                    <img alt="photos" class="photos" src="Images/mer.jpg">
                                     <div class="description">
                                         <h3>Hôtel de la mer</h3>
                                         <p>Nuit à partir de 46€</p>
@@ -160,7 +160,7 @@
                         <div class="cartes">
                             <figure>
                                 <a href="#">
-                                    <img alt="photos" class="photos" src="images/panier.jpg">
+                                    <img alt="photos" class="photos" src="Images/panier.jpg">
                                     <div class="description">
                                         <h3>Auberge Le Panier</h3>
                                         <p>Nuit à partir de 23€</p>
@@ -174,7 +174,7 @@
                         <div class="cartes">
                             <figure>
                                 <a href="#">
-                                    <img alt="photos" class="photos" src="images/amina.jpg">
+                                    <img alt="photos" class="photos" src="Images/amina.jpg">
                                     <div class="description">
                                         <h3>Hôtel chez Amina</h3>
                                         <p>Nuit à partir de 96€</p>
@@ -207,7 +207,7 @@
                     <div id="cartespopulaires"><!--photos chambres + noms/prix/notes-->
                         <figure class="cartes2">
                             <a href="/hotel-le-soleil-du-matin/infos/"><!--carte intégralement cliquable-->
-                                <img alt="photos2" class="photos2" src="images/Soleil.jpg"><!--photo chambre-->
+                                <img alt="photos2" class="photos2" src="Images/Soleil.jpg"><!--photo chambre-->
                                 <div class="sansphoto">
                                     <div class="description2">
                                         <h3>Hôtel Le Soleil du </h3><!--nom hébergement-->
@@ -222,7 +222,7 @@
                         </figure>
                         <figure class="cartes2">
                             <a href="/au-coeur-de-leau/infos/">
-                                <img alt="photos2" class="photos2" src="images/eau.jpg">
+                                <img alt="photos2" class="photos2" src="Images/eau.jpg">
                                 <div class="sansphoto">
                                     <div class="description2">
                                         <h3>Au coeur de l'eau</h3>
@@ -267,40 +267,40 @@
             <div class="cartesactivités"><!--photos lieux + noms lieux-->
                 <figure class="grandescartes">
                     <a href="/vieux-port/infos/"><!--carte intégralement cliquable-->
-                        <img alt="grandesphotos" class="grandesphotos" src="images/vieuxport.jpg"><!--photo lieu-->
+                        <img alt="grandesphotos" class="grandesphotos" src="Images/vieuxport.jpg"><!--photo lieu-->
                         <h3 class="description3">Vieux Port</h3><!--nom lieu-->
                     </a>
                 </figure>
                 <div class="souscarte">
                     <figure id="cartepomegues">
                         <a href="/fort-de-pomegues/infos/">
-                            <img alt="photopomegues" id="photopomegues" src="images/pomègues.jpg">
+                            <img alt="photopomegues" id="photopomegues" src="Images/pomègues.jpg">
                             <h3 class="description3">Fort de Pomègues</h3>
                         </a>
                     </figure>
                     <figure id="cartefrioul">
                         <a href="/ile-de-frioul/infos/">
-                            <img alt="photofrioul" id="photofrioul" src="images/frioul.jpg">
+                            <img alt="photofrioul" id="photofrioul" src="Images/frioul.jpg">
                             <h3 class="description3">Ile de Frioul</h3>
                         </a>
                     </figure>
                 </div>
                 <figure class="grandescartes">
                     <a href="/parc-national-des-calanques/infos/">
-                        <img alt="grandesphotos" class="grandesphotos" src="images/calanques.jpg">
+                        <img alt="grandesphotos" class="grandesphotos" src="Images/calanques.jpg">
                         <h3 class="description3">Parc National des Calanques</h3>
                     </a>
                 </figure>
                 <div class="souscarte">
                     <figure id="cartenotredame">
                         <a href="/notre-dame-de-la-garde/infos/">
-                            <img alt="photonotredame" id="photonotredame" src="images/notredame.jpg">
+                            <img alt="photonotredame" id="photonotredame" src="Images/notredame.jpg">
                             <h3 class="description3">Notre-Dame-de-la-Garde</h3>
                         </a>
                     </figure>
                     <figure id="cartelongchamp">
                         <a href="/parc-longchamp/infos/">
-                            <img alt="photolongchamp" id="photolongchamp" src="images/longchamp.jpg">
+                            <img alt="photolongchamp" id="photolongchamp" src="Images/longchamp.jpg">
                             <h3 class="description3">Parc Longchamp</h3>
                         </a>
                     </figure>
