--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         </figure>
                         <figure class="cartes2">
                             <a href="hotel-tout-bleu-et-blanc/infos/">
-                                <img alt="photos2" class="photos2" src="images/bleu.jpg">
+                                <img alt="photos2" class="photos2" src="Images/bleu.jpg">
                                 <div class="sansphoto">
                                     <div class="description2">
                                         <h3>Hôtel Tout Bleu et </h3>
